--- a/MockSocket/server/server.vcxproj
+++ b/MockSocket/server/server.vcxproj
@@ -150,13 +150,13 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Player\Player.cpp" />
+    <ClCompile Include="src\TCPServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game\Game.h" />
     <ClInclude Include="src\Macro.h" />
     <ClInclude Include="src\Player\Player.h" />
     <ClInclude Include="src\TCPServer.h" />
-    <ClInclude Include="src\TCPServerSelect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
